--- a/index.html
+++ b/index.html
@@ -56,11 +56,8 @@
 
                                  
                                  <li class="has-children">
-                                    <a href="about.html" class=" text-light btn-outline-success nav-link text-left">Home</a>
-                                    <ul class="dropdown">
-                                        <li><a href="teachers.html">Our Teachers</a></li>
-                                        <li><a href="about.html">Our School</a></li>
-                                    </ul>
+                                    <a href="#" class="  btn-outline-success ">Home</a>
+                                   
                                 </li> <li class="has-children">
                                     <a href="about.html" class="btn-outline-success nav-link text-left"> Introduce</a>
                                     <ul class="dropdown">
